aiiin como tá fofinho kkkk

--- a/src/index.html
+++ b/src/index.html
@@ -3,26 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeira Landingpage</title>
+    <title>Landingpage estelar</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/image/favicon-astronauta.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/image/astronaut.icon.ico" type="image/x-icon">
+
 </head>
-<body>
-    
-</body>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha primeira Landing Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+
 
 <body>
     <header>
         <div class="header-divs" id="logotipo-amg-gustavo"> 
-            <img src="/image/imagem-logo.png" alt="Logotipo turma do gustavo">   
+            <img src="/image/2.png" alt="Logotipo turma do gustavo">   
         </div> 
 
         <div class="header-divs"> 
