alguns poucos acrescimo, porque to morta .

--- a/src/index.html
+++ b/src/index.html
@@ -54,30 +54,29 @@
         </div>
 
 
+        
         <section 
         class="principal-conteudo" 
         id="princ-conteudo-um"> 
 
-
-
-
+            <div class="principal-organizaocontainer">
+               <img class="principal-imagem-do-um" 
+               src="/image/pexels-ibrahim-mersim-18966777.jpg" 
+               alt="imagem do outono">
+            </div>
         </section>
 
         <section 
         class="principal-conteudo"      
-        id="princ-conteudo-dois"> 
+        id="princ-conteudo-dois">
 
-
-
-        </section>
-
-        <section 
-        class="principal-conteudo"
-        id="princ-conteudo-tres"> 
-
-
+        <div class="principal-organizaocontainer">
+            <img src="/image/imagem-um.jpg" alt="">
+        </div>
+        
 
         </section>
+
 
 
     </main>
