Footer, que tinha esquecido de subir

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landingpage estelar</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/image/astronaut.icon.ico" type="image/x-icon">
 
@@ -77,13 +78,61 @@
 
         </section>
 
-
-
     </main>
 
 
 
     <footer>
+
+        <div id="rodape-content"> 
+            <div id="rodape-container"> 
+                <img src="/image/3.png" alt="Logo do amg gustavo">
+                <p> It's all about your dreams. </p>
+            </div>
+
+            
+            <div id="rodape-redessociais">
+                <p class="rodape-textoapresentacao"> Deseja mais informações? </p> 
+
+                <div id="rodape-organizacaocontainer"> 
+                <a href="#" class="rodape-link" id="instagram"> 
+                    <i class="fa-brands fa-square-instagram"></i>
+                </a>
+
+                <a href="#" class="rodape-link" id="github"> 
+                    <i class="fa-brands fa-square-github"></i>
+                </a>
+
+                <a href="#" class="rodape-link" id="whatsapp"> 
+                    <i class="fa-brands fa-square-whatsapp"></i>
+                </a>
+                </div>
+
+                <p> Me siga e veja meus projetos.</p>
+            </div>
+
+            <div> 
+                <ul id="rodape-navegacao">
+                    <li>
+                        <a href="#" class="rodape-link"> Home </a>
+                    </li> 
+
+                    <li>
+                        <a href="#" class="rodape-link"> About </a>
+                    </li> 
+
+                    <li>
+                        <a href="#" class="rodape-link"> Explore </a>
+                    </li> 
+
+                    <li>
+                        <a href="#" class="rodape-link"> Blog </a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+
 
     </footer>
 
